refactor: update package configuration and build process
- Changed main entry point to "dist/index.cjs" and added "module" entry for ESM.
- Updated "exports" field to support both ESM and CommonJS with type definitions.
- Switched build tool from TypeScript Compiler (tsc) to tsup for improved build performance.
- Added a separate build script for TypeScript checks without emitting files.
- Enhanced TypeScript configuration with stricter checks for unused locals, parameters, and more.
- Refactored input handling in mergeArrow, mergeCsv, and mergeJson functions for better type safety.
- Improved fetch options in openUrlAsReadable to conditionally include signal.
- Introduced tsup configuration file for better build management.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "@bitofsky/merge-streams",
   "version": "1.0.4",
   "description": "Merge multiple chunked streams (CSV, JSON_ARRAY, ARROW_STREAM) into one unified stream - perfect for Databricks External Links",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
     }
   },
   "files": [
@@ -17,10 +24,11 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
+    "build:tsc": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build:tsc && npm run build"
   },
   "keywords": [
     "stream",
@@ -51,6 +59,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "tsup": "^8.5.1",
     "typescript": "^5.0.0",
     "vitest": "^1.6.0"
   }
